2005-06-27  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/install/old.ihtml: Bugfix: In Debian Etch and Sid.
	* site/install/older-versions.html: Rename from old to ancient branch.
	Bugfix: not in Debian/Sid.  (Mark vd Borre).
	
2005-06-27  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/news.ihtml (href): add THANKS

	* nl/index.html: update links.

	* site/about/faq.html: link to v2.6 docs.

	* site/install/index.html: new file.

	* site/install/using.html: link v2.6 docs.

	* site/news.ihtml (Preferably): announce 2.6

	* site/index.html (Module): add 2.6 to quicklinks.

	* site/documentation.html (Module): set 2.6 as default.

	* site/install/stable.ihtml (Module): change to 2.6

	* site/install/older-versions.html (Module): add 2.2

	* site/install/old.ihtml (Module): change to 2.4

	* site/install/devel.ihtml (Module): -> empty

	* site/  add

2005-06-25  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/news.ihtml: Typo.

2005-06-24  Gauvain Pocentek  <gauvainpocentek@yahoo.fr>

	* fr/switch/testimonials: update

2005-06-23  Gauvain Pocentek  <gauvainpocentek@yahoo.fr>

	* fr/: updates (Han-Wen's changes translations)
	
2005-06-23  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/switch/index.html: rewrite intro paragraph.

2005-06-22  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* newweb.css: add p.boxout{left,right}

	* nl/switch/advantages.html: "Geen gepriegel" rewrite, based on en
	original rewrite.  

	* site/images/lilypond-book-small.png (Module): smaller image for
	better paragraph flow.

	* site/switch/testimonials.html: floating images for darius,
	carter and orm.

	* site/switch/advantages.html: use computer!totaal quote; we do
	have docs of that.
 
	* newweb.css (a): darker links.

	* site/about/screenshots.html: remove file.

	* site/about/faq.html (href): small updates.

	* site/about/features.html: edit.

2005-06-22  Gauvain Pocentek  <gauvainpocentek@yahoo.fr>

	* fr/about/features: update
	
	* fr/install/index.html: new file
